<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ui.main.account.ChangePasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"

        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputCurrentPasswordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:helperText="@string/current_password"
            app:layout_constraintBottom_toTopOf="@+id/inputNewPasswordLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".10"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#000"
                android:imeOptions="flagNoExtractUi"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputNewPasswordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:helperText="@string/new_password"
            app:layout_constraintBottom_toTopOf="@+id/inputConfirmNewPasswordLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCurrentPasswordLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#000"
                android:imeOptions="flagNoExtractUi"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputConfirmNewPasswordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:helperText="@string/confirm_new_password"
            app:layout_constraintBottom_toTopOf="@+id/update_password_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputNewPasswordLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#000"
                android:imeOptions="flagNoExtractUi"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/update_password_button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/update_password"
            android:textAllCaps="false"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputConfirmNewPasswordLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>